--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="https://i.imgur.com/0uc3nQp.png"/> 
+  <meta property="og:image" content="https://media-exp1.licdn.com/dms/image/C4D03AQFYwrXm7DU6OQ/profile-displayphoto-shrink_800_800/0/1662366005872?e=2147483647&v=beta&t=_Z4IvbMbFmE8k6WluU9LUZf6IIXSr5TlyBvo67Fojik"/> 
   <meta property="og:type" content="website"/> 
-  <meta property="og:url" content="http://www.user.tu-berlin.de/sasho/"/>
+  <meta property="og:url" content="https://snedelkoski.github.io/"/>
   <meta property="og:title" content="Sasho Nedelkoski"/>
-  <meta property="og:description" content="Research page">
+  <meta property="og:description" content="Sasho Nedelkoski">
   
   <title>Sasho Nedelkoski</title>
   <meta name="description" content="Research page">
-   <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/TU-Berlin-Logo.svg/300px-TU-Berlin-Logo.svg.png">
+   <link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4D03AQFYwrXm7DU6OQ/profile-displayphoto-shrink_800_800/0/1662366005872?e=2147483647&v=beta&t=_Z4IvbMbFmE8k6WluU9LUZf6IIXSr5TlyBvo67Fojik">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="canonical" href="./">
   <link rel="alternate" type="application/rss+xml" title="Sasho Nedelkoski" href="./feed.xml">
