--- a/index.html
+++ b/index.html
@@ -39,15 +39,12 @@
 
           <img src="./sasho.jpeg" class="profile-picture"></img>
 
-          <p align='justify'>I am currently Chief Technology Officer @ logsight.ai where I am responsible for the end-to-end machine learning stack.</p>
+          <p align='justify'>I am currently Chief Technology Officer @ logsight.ai, where I am responsible for the machine learning stack.</p>
 
-          <p align='justify'>My experience comes from six years of machine learning research and development, and three years of software engineering. I like building end-to-end machine learning systems.</p>
-          
-
-          <p align='justify'>I obtained my PhD in Computer Science from TU Berlin at the Distributed and Operating Systems department, where I also got my MSc in Computer Science with focus on Machine Learning and Distributed Systems
+          <p align='justify'>My experience comes from six years of machine learning research and development, coupled with three years of software engineering. I like building end-to-end machine learning systems.</p>
+          <p align='justify'>My interests are in AI for software engineering. Especially with a focus on developing machine learning methods for software data (code and observability) to support various software engineering tasks.</p>
+          <p align='justify'>I obtained a PhD in Computer Science from TU Berlin at the Distributed and Operating Systems department supervised by Prof. Dr. Odej Kao, where I also got my MSc in Computer Science with focus on Machine Learning and Distributed Systems
           </p> 
-          <br />
-	<p align='justify'> My interests are in AI for software engineering. Especially interested in developing machine learning methods for software data (code and observability) to support various software engineering, and troubleshooting tasks.</p>
           <p>
             <a href="SashoN_CV.pdf">CV</a> /
 		<a href="https://scholar.google.com/citations?user=4we2u34AAAAJ&hl=en">Google Scholar</a> /
@@ -164,7 +161,7 @@
           <ul class="publications">
           <li class="article">
               <span class="title">
-                PC & Reviewer: ECML-PKDD, ICDM, TNSM, DKE, TKDE
+                PC & Reviewer: ICDM, ECML-PKDD, TNSM, DKE, TKDE
               </span>
             </li>
           
