--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   
   <title>Sasho Nedelkoski</title>
   <meta name="description" content="Research page">
-   <link rel="icon" href="https://media-exp1.licdn.com/dms/image/C4D03AQFYwrXm7DU6OQ/profile-displayphoto-shrink_800_800/0/1662366005872?e=2147483647&v=beta&t=_Z4IvbMbFmE8k6WluU9LUZf6IIXSr5TlyBvo67Fojik">
+   <link rel="icon" href="./favicon.ico">
   <link rel="stylesheet" href="./css/main.css">
   <link rel="canonical" href="./">
   <link rel="alternate" type="application/rss+xml" title="Sasho Nedelkoski" href="./feed.xml">
