--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
           <img src="./sasho.jpeg" class="profile-picture"></img>
 
-          <p align='justify'>I am currently Chief Technology Officer @ logsight.ai, where I am responsible for the machine learning stack.</p>
+          <p align='justify'>I am currently CTO @ logsight.ai, where I work on the things I really like -- building end-to-end machine learning systems.</p>
 
-          <p align='justify'>My experience comes from six years of machine learning research and development, coupled with three years of software engineering. I like building end-to-end machine learning systems.</p>
-          <p align='justify'>My interests are in AI for software engineering. Especially with a focus on developing machine learning methods for software data (code and observability) to support various software engineering tasks.</p>
-          <p align='justify'>I obtained a PhD in Computer Science from TU Berlin at the Distributed and Operating Systems department supervised by Prof. Dr. Odej Kao, where I also got my MSc in Computer Science with focus on Machine Learning and Distributed Systems
+          <p align='justify'>My experience comes from six years of machine learning research and development, coupled with three years of software engineering.</p>
+          <p align='justify'>My interests, both research and development, are in AI for software engineering. Lately the focus is on developing ML systems for software data (code and observability) to support various software development tasks.</p>
+          <p align='justify'>I obtained my Ph.D. in Computer Science from TU Berlin at the Distributed and Operating Systems department supervised by Prof. Dr. Odej Kao, where I also got my M.Sc. in Computer Science with focus on Machine Learning and Distributed Systems
           </p> 
           <p>
             <a href="SashoN_CV.pdf">CV</a> /
