--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <img src="./sasho.jpeg" class="profile-picture"></img>
 
-          <p align='justify'>I am currently CTO @ logsight.ai, where I work on the things I really like -- building end-to-end machine learning systems.</p>
+          <p align='justify'>I am currently CTO @ logsight.ai, where I work on the things I really like &#8212; building end-to-end machine learning systems.</p>
 
           <p align='justify'>My experience comes from six years of machine learning research and development, coupled with three years of software engineering.</p>
           <p align='justify'>My interests, both research and development, are in AI for software engineering. Lately the focus is on developing ML systems for software data (code and observability) to support various software development tasks.</p>
