--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
           <p align='justify'>I am currently CTO @ logsight.ai, where I work on the things I really like &#8212; building end-to-end machine learning systems.</p>
           <p align='justify'>My experience comes from six years of machine learning research and development, coupled with three years of software engineering.</p>
-          <p align='justify'>My interests, both research and development, are in AI for software engineering. Lately the focus is on developing ML systems for software data (code and observability) to support various software development tasks.</p>
-          <p align='justify'>I obtained my Ph.D. in Computer Science from TU Berlin at the Distributed and Operating Systems department supervised by Prof. Dr. Odej Kao, where I also got my M.Sc. in Computer Science with focus on Machine Learning and Distributed Systems
+          <p align='justify'>My interests both in research and engineering, are in machine larning for software engineering. Lately the focus is on developing machine learning systems for software data (code and observability) to support various software development tasks.</p>
+          <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science with focus on machine learning and distributed systems
           </p> 
           <p>
             <a href="SashoN_CV.pdf">CV</a> /
