--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
           <img src="./sasho.jpeg" class="profile-picture"></img>
 
           <p align='justify'>I am currently CTO @ logsight.ai, where I work on the things I really like &#8212; building end-to-end machine learning systems.</p>
-          <p align='justify'>My experience comes from six years of machine learning research and development, coupled with three years of software engineering.</p>
-          <p align='justify'>My interests both in research and engineering, are in machine larning for software engineering. Lately the focus is on developing machine learning systems for software data (code and observability) to support various software development tasks.</p>
-          <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science with focus on machine learning and distributed systems
+          <p align='justify'>My interests both in research and engineering, are in the intersection of machine larning and software engineering and incorporates a wide variety of aspects. Lately the focus is on developing machine learning systems for software data (code and observability) to support various software development tasks.</p>
+          <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science with focus on machine learning and distributed systems.
           </p> 
           <p>
             <a href="SashoN_CV.pdf">CV</a> /
