--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
           <p align='justify'>I am currently CTO @ logsight.ai, where I work on building end-to-end machine learning systems.</p>
           <p align='justify'>My interests both in research and engineering, are in the intersection of machine larning and software engineering and incorporates a wide variety of aspects. Lately the focus is on developing machine learning systems for software data (code and observability) to support various software development tasks.</p>
-          <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science with focus on machine learning and distributed systems.
+          <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science.
           </p> 
           <p>
             <a href="SashoN_CV.pdf">CV</a> /
