--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
           <img src="./sasho.jpeg" class="profile-picture"></img>
 
-          <p align='justify'>I am currently Chief Data Scientist @ logsight.ai, where I work on building end-to-end machine learning systems.</p>
-          <p align='justify'>My interest in both research and engineering is machine learning for anomaly detection. My research focus lies in anomaly detection models for code analysis and natural language data, whereas my engineering focus lately is on development of end-to-end ML systems for software data to support various software development tasks.</p>
+          <p align='justify'>I am currently Senior Data Scientist @ CARIAD SE (Volkswagen Group), where I work on building machine learning systems.</p>
+          <p align='justify'>My interest in both research and engineering is machine learning for anomaly detection, intrusion detection, and software operation.</p>
           <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science.
           </p> 
           <p>
