--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
           <img src="./sasho.jpeg" class="profile-picture"></img>
 
-          <p align='justify'>I am currently Senior Data Scientist @ CARIAD SE (Volkswagen Group), where I work on building machine learning systems.</p>
-          <p align='justify'>My interest in both research and engineering is machine learning for anomaly detection, intrusion detection, and software operation.</p>
+          <p align='justify'>I am currently Senior Data Scientist @ CARIAD SE (Volkswagen Group). We are building exciting tools for data scientists, computer vision, NLP, systems security, and beyond.</p>
+          <p align='justify'>My interest in both research and engineering cover the areas of: (1) deep anomaly detection, (2) intrusion detection, (3) AI for software engineering, (4) applications, primarily in terms of user models, NLP, temporal models, and modeling data at scale is a great source of inspiration.</p>
           <p align='justify'>I did a Ph.D. in Computer Science at Technical University of Berlin supervised by Prof. Dr. Odej Kao, where I also did a M.Sc. in Computer Science.
           </p> 
           <p>
-            <a href="SashoN_CV.pdf">CV</a> /
+            <a href="SashoN_CV.pdf">CV</a>
 		<a href="https://scholar.google.com/citations?user=4we2u34AAAAJ&hl=en">Google Scholar</a> /
             <a href="https://www.linkedin.com/in/snedelkoski/">Linkedin</a>
           </p>
