--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ several industry related research projects
 in collaboration with Huawei German Research
 Center. I obtained a Ph.D. in Computer Science
  at the Technical University of Berlin 
-supervised by Prof. Dr. Odej Kao, in 2021.
+supervised by <a href="https://www.tu.berlin/en/dos/about/professor">Prof. Dr. Odej Kao</a>, in 2021.
  During that time I was working at the
  <a href="https://www.zib.de/projects/bbdc-berlin-big-data-center">
 Berlin Big Data Center</a>, 
