--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
 
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:type" content="website"/> 
   <meta property="og:url" content="https://snedelkoski.github.io/"/>
@@ -11,9 +10,10 @@
   <meta property="og:description" content="Sasho Nedelkoski">
   
   <title>Sasho Nedelkoski</title>
-  <meta name="description" content="Research page">
+  <meta name="description" content="Explore the latest research on Data Science, 
+				    AI, and Anomaly Detection by Sasho Nedelkoski. 
+				    Learn about his background, publications, and current work.">
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="canonical" href="./">
   <link rel="alternate" type="application/rss+xml" title="Sasho Nedelkoski" href="./feed.xml">
 
 </head>
